--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-fetch": "^2.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-native-web": "^0.11.4",
     "react-scripts": "^3.0.0"
   },
   "scripts": {
