--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.1",
     "downshift": "^3.2.10",
     "encoding": "^0.1.12",
     "node-fetch": "^2.3.0",
