--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-fetch": "^2.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.5.7",
     "react-native-web": "^0.11.4",
     "react-scripts": "^3.0.0",
     "starwars-names": "^1.6.0"
