--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
     "react-native-web": "^0.11.4",
+    "react-redux": "^7.0.3",
     "react-scripts": "^3.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "starwars-names": "^1.6.0"
   },
   "scripts": {
