--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@material-ui/icons": "^4.0.1",
     "@material-ui/styles": "^4.0.1",
     "axios": "^0.19.0",
+    "co": "^4.6.0",
+    "dotenv": "^8.0.0",
     "downshift": "^3.2.10",
     "encoding": "^0.1.12",
+    "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
