--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-web": "^0.11.4",
     "react-redux": "^7.0.3",
     "react-scripts": "^3.0.0",
+    "react-select": "^3.0.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "starwars-names": "^1.6.0"
