--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.0.1",
     "@material-ui/styles": "^4.0.1",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "co": "^4.6.0",
     "dotenv": "^8.0.0",
     "downshift": "^3.2.10",
