--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "encoding": "^0.1.12",
     "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
+    "nodemailer": "^6.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
