--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "co": "^4.6.0",
     "dotenv": "^8.0.0",
     "downshift": "^3.2.10",
+    "email-templates": "2",
     "encoding": "^0.1.12",
     "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
