--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   ],
   "devDependencies": {
     "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
     "babel-loader": "8.0.5",
     "http-proxy-middleware": "^0.19.0",
     "netlify-lambda": "^1.4.5",
