--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "co": "^4.6.0",
     "dotenv": "^8.0.0",
     "downshift": "^3.2.10",
+    "email-templates": "2",
     "encoding": "^0.1.12",
     "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
+    "nodemailer": "^6.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
@@ -45,6 +47,8 @@
   ],
   "devDependencies": {
     "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
     "babel-loader": "8.0.5",
     "http-proxy-middleware": "^0.19.0",
     "netlify-lambda": "^1.4.5",
