--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "downshift": "^3.2.10",
     "email-templates": "2",
     "encoding": "^0.1.12",
+    "moment-timezone": "^0.5.25",
     "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
     "nodemailer": "^6.2.1",
