--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-ga": "^2.5.7",
     "react-native-web": "^0.11.4",
     "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.0",
     "react-select": "^3.0.4",
     "redux": "^4.0.1",
