--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "encoding": "^0.1.12",
     "lodash.get": "^4.4.2",
     "moment-timezone": "^0.5.25",
+    "mongodb": "^3.3.1",
     "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
     "nodemailer": "^6.2.1",
