--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "encoding": "^0.1.12",
     "lodash.get": "^4.4.2",
     "moment-timezone": "^0.5.25",
+    "mongodb": "^3.3.1",
     "mongoose": "^5.5.14",
     "node-fetch": "^2.3.0",
     "nodemailer": "^6.2.1",
@@ -52,7 +53,7 @@
     "@babel/plugin-transform-object-assign": "^7.0.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
-    "babel-loader": "8.0.5",
+    "babel-loader": "^8.0.6",
     "http-proxy-middleware": "^0.19.0",
     "netlify-lambda": "^1.4.5",
     "npm-run-all": "^4.1.5"
